--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1044,3 +1044,52 @@ year = {2018},
   year={2020},
   publisher={Springer}
 }
+
+@book{yegnanarayana2009artificial,
+  title={Artificial neural networks},
+  author={Yegnanarayana, Bayya},
+  year={2009},
+  publisher={PHI Learning Pvt. Ltd.}
+}
+
+@article{back1993overview,
+  title={An overview of evolutionary algorithms for parameter optimization},
+  author={B{\"a}ck, Thomas and Schwefel, Hans-Paul},
+  journal={Evolutionary computation},
+  volume={1},
+  number={1},
+  pages={1--23},
+  year={1993},
+  publisher={mit Press}
+}
+
+@article{villa2021semi,
+  title={Semi-supervised anomaly detection algorithms: A comparative summary and future research directions},
+  author={Villa-P{\'e}rez, Miryam Elizabeth and Alvarez-Carmona, Miguel A and Loyola-Gonz{\'a}lez, Octavio and Medina-P{\'e}rez, Miguel Angel and Velazco-Rossell, Juan Carlos and Choo, Kim-Kwang Raymond},
+  journal={Knowledge-Based Systems},
+  volume={218},
+  pages={106878},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{prajwala2015comparative,
+  title={A comparative study on decision tree and random forest using R tool},
+  author={Prajwala, TR},
+  journal={International journal of advanced research in computer and communication engineering},
+  volume={4},
+  number={1},
+  pages={196--199},
+  year={2015}
+}
+
+@article{bentejac2021comparative,
+  title={A comparative analysis of gradient boosting algorithms},
+  author={Bent{\'e}jac, Candice and Cs{\"o}rg{\H{o}}, Anna and Mart{\'\i}nez-Mu{\~n}oz, Gonzalo},
+  journal={Artificial Intelligence Review},
+  volume={54},
+  number={3},
+  pages={1937--1967},
+  year={2021},
+  publisher={Springer}
+}
