--- a/tex/1_Introduction.tex
+++ b/tex/1_Introduction.tex
@@ -14,11 +14,14 @@ Nevertheless, the complexity inherent of these domains raises some challanges. U
 % they are hard to achieve
 % Modern techniques view formal methods as the most promising means of delivering such evidences \cite{assurances2017}. Model checking, for instance, is a automata-based method tipically run offline to check the fulfillment of goals and properties for all attainable states in the model. Nonetheless, this task can become infeasible in highly complex CPS, since the process can suffer from state-space explosion and the loss of representativeness \cite{2014PerceptionsSOTAV&VCPS}.
 
-The Runtime Verification field \cite{colombo2021runtime} tries to address this problem. One of its techiniques relies on deriving a set of properties from the specification that formally describe how the system should behave. Then, runtime monitors are developed as a means to verify the satisfiability of each property while the CPS is being executed. The so called observers are state machines capable of performing the verification task by reading the log files, or the signals sent between the system modules. When a violation is spotted, an error state is reached. Nevertheless, in some cases, it might not be possible to wait for the CPS to be deployed and realize the verification afterwards, since it may potentially be costly or even harmful. The alternative, then, is to develop a model-based prototype of the system \cite{mohamed2021model}. In this case, the CPS would be modeled in a simulation environment, while still in the early stages of development, with the Runtime Verification monitors acting as observers to analyze the properties during the simulation.
+The Runtime Verification field \cite{colombo2021runtime} tries to address this problem. One of its techiniques relies on deriving a set of properties from the specification that formally describe how the system should behave. Then, runtime monitors are developed as a means to verify the satisfiability of each property while the CPS is being executed. The so called observers are state machines capable of performing the verification task by reading the log files, or the signals sent between the system modules. When a violation is spotted, an error state is reached. When that happens, the system can alert the user, or run some predefined process in order to maintain the regular operation. Afterwards, the analyst can take a closer look and perform the proper correction measures.
+
+Nevertheless, in some cases, it might not be possible to wait for the CPS to be deployed and realize the verification afterwards, since it may potentially be costly or even harmful. A possible solution is to develop a prototype of the system before its deployment \cite{mohamed2021model}. In this case, the CPS would be modeled in a simulation environment, while still in the early stages of development, with the Runtime Verification monitors acting as observers to analyze the properties during the simulation. Several simulations may be executed, with varying configurations to account for the different scenarios that may happen in runtime. Such scenarios may include failures in components, physical processes that may impact the CPS' behavior, crashes in the system and so on.
+
 
 However, the CPS verification task is a difficult undertaking yet to be perfectly achieved \cite{patankar2020safety}. One of the reasons is that, when applications are first designed, the knowledge about the environment in which they will be deployed may be incomplete, and also subject to continuous change over the application's lifetime \cite{assurances2017}. This fact may affect the quality aspects of CPSs operation both at a physical and at a logical level, such as a freezing temperature affecting a sensor's capacity to deliver reliable data. Besides that, the complex relation between the cyber and physical aspects of the CPS contributes to the challenging task of monitoring such systems. While the physical process are modeled by time-continuous equations, the discrete behavior of software components can be described as state machines \cite{Baheti2019CyberPhysicalS}. Other complexities are related to the dynamic behavior of the physical components, i.e. deterioration and malfunctioning, for instance.
 
-All of that may cause the observers to miss out on some important aspects that should be considered when monitoring a property. In face of a faulty scenario, the system analyst might wonder "what caused the property violation?" or "which components or behaviors are related to violations of the property?". The intricate relation between the cybernetic and physical natures of CPS creates obstacles when obtaining the set of configurations or behaviors that lead the system to anomalous behavior. Trying to address this problem by debbuging the prototype can be a very time-consuming task, whithout any guarantees of solving it.
+All of that may cause the observers to misbehave or miss out on some important aspects that should be considered when monitoring a property. In face of a faulty scenario, the system analyst might wonder "what caused the property violation?" or "which components or behaviors are related to violations of the property?". The intricate relation between the cybernetic and physical natures of CPS creates obstacles when obtaining the set of configurations or behaviors that lead the system to anomalous behavior. Trying to address this problem by debbuging the prototype can be a very time-consuming task, whithout any guarantees of solving it.
 
 Hence there is a need for an approach that increases the reliability of Cyber-physical systems by enhancing the runtime monitors. This technique should support the system analyst in the understanding of the context variabilities that provoke the violation of the system's properties, in a way that accounts for the complexities of the CPS. In summary, the goal of this study can be condensed in the following research question:
 
@@ -118,18 +121,18 @@ Hence there is a need for an approach that increases the reliability of Cyber-ph
 %%%% Method %%%%
 \section{Proposed Solution}
 
-Seeking inspiration in processes from other fields is a very common activity in Computer Science. Nature, especially biology, has long served as a fruitfull source of methodologies like artificial intelligence approaches. Artificial Neural Networks (ANN) are inspired by the functioning of the nervous system, Evolutionary Algorithms (EA) were based on the Darwinian theory of evolution, and the biologic immune system led to the creation of Artificial Immune Systems (AIS). These new developing soft computing approaches have already been employed in a variety of disciplines since the early 1990s. 
+Seeking inspiration in processes from other fields is a very common activity in Computer Science. Nature, especially biology, has long served as a fruitfull source of methodologies like artificial intelligence approaches. Artificial Neural Networks (ANN) are inspired by the functioning of the nervous system \cite{yegnanarayana2009artificial}, Evolutionary Algorithms (EA) were based on the model of natural evolution \cite{back1993overview}, and the biologic immune system led to the creation of Artificial Immune Systems (AIS) \cite{ICBook2009}. These new developing soft computing approaches have already been employed in a variety of disciplines since the early 1990s. 
 
 The Negative Selection Algorithm \cite{ICBook2009}, for example, is an immuno-based technique with multiple successful applications in the field of CPS, primarily in the field of fault diagnostics for the identification of anomalous behavior. This one-class method works by developing detectors aimed at classifying data that corresponds to abnormal behavior. A carefull study of these detectors may lead to explanations about the patterns that generate such behaviors and the isolation of the fault and the enabling of the development of fault-tolerant mechanisms that increase the runtime montioring of CPSs. This algorithm may bring several benefits for the field of CPS verification. By defining as abnormal behavior situations where the formalised system properties are not met, the patterns that define violations could be assessed and, hence, the system properties could be enhanced. 
 
-In this work, we propose a methodology that aims at increasing the reliability of CPSs. This is achieved by a systematical diagnosis of system properties violations based on data generated by a protoype, performed in the early stages of development. The immuno-inspired algorithm called Negative Selection (NSA) serves as an analytical redundancy method to indicate the features or behaviors that account for property violations in the system. We believe that, by reasoning about why the property violations happen, the system specification and the property themselves may be refined, fault-tolerant mechanisms may be added, and, thus, safer and better applications might be written.
+In this work, we propose a methodology that aims at increasing the reliability of CPSs. This is achieved by a systematical diagnosis of system properties violations based on data generated by a protoype, performed in the early stages of development. The immuno-inspired algorithm called Negative Selection (NSA) serves as an analytical redundancy method to indicate the features or behaviors that account for property violations in the system. We believe that, by reasoning about why the property violations happen, the runtime monitors may be refined, fault-tolerant mechanisms may be added, and, thus, safer and better applications might be written.
 
 The methodology is comprised of two main phases. In the first phase, a prototype of the system is implemented based on the specification of the system and a set of properties derived from it. The observers are also implemented in the prototype for the verification of the properties satisfiability during the simulantions. After that, several simulations are performed with varying configurations, input data and parameters in order to account for the context variability that may arise at runtime. 
 
 
 % the system specification in the form of a Contextual Goal Model (CGM) is used as input to model the behavior of the system as timed automata. Then, by using pattern catalogs, real-time system properties are derived from the CGM and expressed as observer automata. The system model along with the observers, then, undergo a model checking process to assert the system's correctness and the satisfiability of the properties. Finally, 
 
-In the second phase we perform the analysis of property violations in the data extracted from the prototype. The data, initially, is feature engineered and labeled as self or nonself, meaning regular data traces or faulty traces that incur in violation. Then, the NSA is executed by generating random detectors based on the features of the dataset. These detectors go through a censoring process, in which they are tested against the self data and are discarded if matched. The resulting set contains detectors specialized in matching nonself data which are carefully examined so that the patterns discovered can be comprehended. This process shares some similarities with the Analytical Redundancy Method \cite{gao2015survey}, since the pre-knowledge of a healthy system are the properties being verified against the prototype data. Hence, it allows for the reasoning about the causes of such violations, which can be used by the Analyst to enhance the sytem's specification, properties and the observers.
+In the second phase we perform the analysis of property violations in the data extracted from the prototype. Initially, a feature engineering process takes place to derive a set of boolean features to describe the behavior of the CPS. Then, based on the intended behavior of the observers, the rows are labeled as self or nonself, meaning regular data traces or faulty traces that incur in violation. Next, each row is formatted as binary strings. Then, the NSA is executed on the self data: new binary strings are generated, which go through a censoring process, in which they are tested against the self data, based on a similarity function, and are discarded if matched. The resulting set contains detectors specialized in matching nonself data which are carefully examined so that the patterns discovered can be comprehended. This process shares some similarities with the Analytical Redundancy Method \cite{gao2015survey}, since the pre-knowledge of a healthy system are the properties being verified against the prototype data. Hence, it allows for the reasoning about the causes of such violations, which can be used by the Analyst to enhance the sytem's specification, properties and the observers.
 
 The Biological immune system (BIS) not only provides the NSA technique, but also acts as a metaphore for the entire methodology. The initial phase can be related to the Innate Immunity response, since it is the first line of defense of the body. The prototype with the "naive" observers face the simulated runtime scenarios without a refined knowledge, just as the nonspecific process of the human body. The antigens are seen here as the execution traces that incur in property violation. The operation data from the simulation follows to the second phase of our approach, which can be compared to the Adaptive Immunity response of the BIS. The biological system produces T cells, which are matured in the Thymus by a censoring process called Negative Selection, in which the lymphocytes are discarded if they strongly bind to proteins of the body. These matured white blood cells are then used by the body to combat pathogens. Analogously, the framework we are proposing uses the Negative Selection algorithm to create a set of random detectors, which are "matured" by being tested against the operation dataset from the prototype. These detectors, in turn, are used to enhance observer automata capable of acting with a more refined knowledge of the environment. 
 
@@ -139,6 +142,8 @@ We experimentally assess our strategy by designing a version of the Body Sensor 
 The simulations were performed by using a dataset of 1,000 randomly generated patient data. The feature engineering process and the Negative Selection Algorithm were both implemented in the Python programming language, which was also used in the causality analysis of the detectors.
 
 The NSA was evaluated regarding its generalization to unseen data. In this matter, all of the execution segments that the model identified as property violations found were, in fact, violations, accounting for a precision of 100\%. Nevertheless, some patterns were not detected by the algorithm, resulting in a recall rate of 0.9958. In addition, the analysis of the efficiency of the technique was performed based on the number of patterns found. The generated nonself detectors resulted in the discovery of 49 unveiled patterns related to faulty segments, which were grouped into 11 clusters based on similarity. 
+
+Our approach was also compared with other Machine Learning algorithms. Two popular state-of-the-art semi-supervised anomaly detection algorithms, namely the One-Class SVM and the Isolation Forest \cite{villa2021semi}, were run on the same data, achieving a precision of 41.8\% and 29.2\%, respectively. This shows the strength of the NSA for this task. Besides that, the algorithms Decision Tree, Random Forest and Gradient Boosting \cite{prajwala2015comparative, bentejac2021comparative} were also tested, with similar performance when compared with the NSA. The advantage of the Negati Selection Algorithm lies on the generated strings that are capable of matching with nonself data. Those strings can be further analyzed to understand the patterns that may cause vaiolations in the system. In the meanwhile, the Random Forest and the Gradient Boosting provide only the importance of each feature, but not the relationship between them in such cases. On the other hand, the Decision tree outputs a tree from which patterns can be visualized, although it provided way less patterns in comparison with the proposed methodology.
 
 \section{Organization}
 The rest of the document is organized as follows. Chapter \ref{2_Background} introduces some concepts that are useful for the understanding of the framework. In Chapter \ref{sec:BSN} introduces the case study that will be followed along the work. Chapter \ref{4_Proposal} futher details the proposed approach. Chapter \ref{3_RelatedWork} shows some works that are strongly related to our proposed methodology. Chapter \ref{5_Evaluation} presents the results of the work after the evaluation, while Chapter \ref{sec:Conclusion} concludes and provides the directions for future works.
