--- a/tex/5_Evaluation.tex
+++ b/tex/5_Evaluation.tex
@@ -137,7 +137,7 @@ Finally, the Negative Selection Algorithm was run, based on the simulation gener
 We are using the metrics of precision and recall to assess the performance of the model, since they provide a good summary of the confusion matrix. The recall rate is computed as \textit{True Positives} / (\textit{True Positives + False Positives}), i.e. how many of the relevant property violations were found, while the precision rate is calculated as \textit{True Positives} / (\textit{True Positives + False Negatives}), and is the same as asking "how many property violations found were relevant." Our main interest was in having a high precision rate, since we wanted to have the lowest value of \textit{False positives} as possible. This happens because the goal was to study the generated detectors to understand the patterns found, and having \textit{False positives} could impact in this task. On the other hand, having \textit{False Negatives} would not have such impact, once they would be related to the patterns that were not discovered by the detectors, thus causing less harm to the overall approach. Figure \ref{fig:nsa_conf} depicts the confusion matrix of the results of the model. No self-data was considered as faulty, meaning that there were no \textit{False Positives}, as desired. Nevertheless, only 2 violations were not assessed by the NSA, which is within an acceptable range.
 
 
-Table \ref{tab:ev_comparison} shows the precision and recall rates of our approach using the Negative Selection Algorithm over the simulation dataset in relation to the property \textbf{P7} for the Oximeter sensor. The accuracy and MCC rates were also computed as a way to have a complementary view on the performance. Besides that, the same labeled dataset was also used as input for some well known Machine Learning algorithms. The One-class SVM and the Isolation Forest were brought to this comparison since they are algorithms utilized in anomaly detection tasks, and because the One-class SVM is usually compared with the NSA for they both use only one of the classes during the training phase \cite{NSAResearch2021}. The Random Forest and the Gradient Boosting algorithms were also compared for its broad usage in the Machine Learning comunity. 
+Table \ref{tab:ev_comparison} shows the precision and recall rates of our approach using the Negative Selection Algorithm over the simulation dataset in relation to the property \textbf{P7} for the Oximeter sensor. The accuracy and MCC rates were also computed as a way to have a complementary view on the performance. Besides that, the same labeled dataset was also used as input for some well known Machine Learning algorithms. The One-class SVM and the Isolation Forest were brought to this comparison since they are popular state-of-the-art semi-supervised anomaly detection algorithms \cite{villa2021semi}, and because the One-class SVM is usually compared with the NSA for they both use only one of the classes during the training phase \cite{NSAResearch2021}. The Decision tree, the Random Forest and the Gradient Boosting algorithms  \cite{prajwala2015comparative, bentejac2021comparative} were also compared for its broad usage in the Machine Learning comunity. 
 
 \begin{table}[!h]
     \centering
@@ -147,7 +147,8 @@ Table \ref{tab:ev_comparison} shows the precision and recall rates of our approa
     \textbf{Negative Selection} & \textbf{0.9995}   & \textbf{1.0}       & \textbf{0.9976} & \textbf{0.9985} \\
     One-Class SVM      & 0.7634   & 0.4180    & 1.0    & 0.5467 \\
     Isolation Forest   & 0.7173   & 0.2928    & 0.4691 & 0.2002 \\
-    Random Forest      & 0.9995   & 1.0       & 0.9976 & 0.9985 \\
+    Decision Tree      & 0.9995   & 1.0       & 0.9976 & 0.9985 \\
+	Random Forest      & 0.9995   & 1.0       & 0.9976 & 0.9985 \\
     Gradient Boosting  & 0.9995   & 1.0       & 0.9976 & 0.9985 \\ \hline
     \end{tabular}
     \caption{NSA Performance comparison}
@@ -168,7 +169,7 @@ Table \ref{tab:ev_comparison} shows the precision and recall rates of our approa
 %     \caption{NSA Performance comparison}
 %     \end{table}
 
-From the table, it is clear that the NSA performed way better than its counteparts in the anomaly detection field. Athough it had a very similar performance compared to Random Forest ant Gradient Boosting, the interpretability provided by the algorithm through the observers is paramount to handle not only the detection of property violations, but also to provinding relevant information for the analyst to enhance the verification of the CPS.
+From the table, it is clear that the NSA performed way better than its counteparts in the anomaly detection field. Athough it had a very similar performance compared to Random Forest ant Gradient Boosting, the interpretability provided by the algorithm through the observers is paramount to handle not only the detection of property violations, but also to provinding relevant information for the analyst to enhance the verification of the CPS. This will be much more clear in the evaluation of Goal 2.
 
 \section{Goal 2: Method's contribution}
 \textbf{Question: How effective is our approach in the discovery of patterns in property violation scenarios?} This question will be assessed by delving deeper on the Detector Analysis step of the proposed methodology. As illustrated in Figure \ref{fig:detectoAnalysis}, the detector's string are reverse mapped to the features by using the values from Table \ref{tab:pos_features} and the detector's position. 
@@ -215,16 +216,16 @@ Figure \ref{fig:ev_pattern_spec_reverse_mapping} shows the reverse mapping of th
 \end{figure}
 
 
-Finally, the patterns and their specializations were all computed and are laid out in Figure \ref{fig:ev_sankey}. The Sankey chart helps us not only to understand the relationship amongst the detectors, but it also provides a visual aid for identifying the strength of the relation. In the figure, the most relevant detectors are placed on the left side of the pair, and their specialization are displayed in the right side. The strength of the relation can be seen in the line that connects them. The larger the line connecting two points is, the more nonself data are detected by the pair. Some relations are simple as the exemple from Figure \ref{fig:ev_pattern_spec}, but others can bring more complex structures, like the group formed by detector \textit{(5, '01011)}.
+Finally, the patterns and their specializations were all computed and are laid out in Figure \ref{fig:ev_sankey}. The Sankey chart helps us not only to understand the relationship amongst the detectors, but it also provides a visual aid for identifying the strength of the relation. In the figure, the most relevant detectors are placed on the left side of the pair, and their specialization are displayed in the right side. The strength of the relation can be seen by the line that connects them. The larger the line connecting two points is, the more nonself data are detected by the pair. Some relations are simple as the exemple from Figure \ref{fig:ev_pattern_spec}, but others can bring more complex structures, like the group formed by detector \textit{(5, '01011)}. The pattern groups were named and further divided into two clusters, based on their instrinsic characteristics.
 
 \begin{figure}[]
 	\centering
-	\includegraphics[width=\textwidth, keepaspectratio]{img/sankey3.png}
+	\includegraphics[width=\textwidth, keepaspectratio]{img/sankey4.png}
 	\caption{Groups of Detectors identified based on the similarity of patterns}
 	\label{fig:ev_sankey}
 \end{figure}
 
-Table \ref{tab:patterns_detector_group} elaborates on the sankey chart from Figure \ref{fig:ev_sankey}. It provides more information on the pattern that was identified by each detector group, along with the respective percentage of nonself data matched within each set. A total of 63\% of the nonself set matched with the detector from Group E. From the description, we can see that it accounts for the cases when the sensor stopped responding because it was too far away to transmit reliable data, or it had some malfunctioning that may account for faults in runtime. Differently, Group A matches the cases in which the data was not transmitted due to the battery running out either during the data collection, processing or transfering. It was the second in percentage of matches, accounting for near 21\% of the total of anomalous data. Group B goes in a similar direction, by matching violations related to the lack of battery during the acquisition of data, though the bits in the mid-region of the string. Group C, in turn, defined a set of mixed patterns that account for both the battery running out and the malfunctioning of the sensor.
+Table \ref{tab:patterns_detector_group} elaborates on the sankey chart from Figure \ref{fig:ev_sankey}. It provides more information on the pattern that was identified by each detector group, along with the respective percentage of nonself data matched within each set. Cluster 1 comprises the patterns that matched the most, with the positions closer to 0. This points to the relevance of these patterns, since they include the features that are more related to the violation data. A total of 63\% of the nonself set matched with the detector from Group E, the highest value. From the description, we can see that it accounts for the cases when the sensor stopped responding because it was too far away to transmit reliable data, or it had some malfunctioning that may account for faults in runtime. Nevertheless, the absency of the sensor was already addressed in the specification of the BSN \cite{seams2018}, and thus is not a novelty that would impact the design of the observer.
 
 
 \begin{table}[]
@@ -240,11 +241,11 @@ Table \ref{tab:patterns_detector_group} elaborates on the sankey chart from Figu
 	\multicolumn{1}{c|}{}                   & (5,'100000')  & (6,'00001')      & \multicolumn{1}{c|}{}            & \multicolumn{1}{c|}{}                                                                    & 1,78\%                        \\ \hline
 	\multicolumn{1}{c|}{\multirow{3}{*}{C}} & (0,'00011')   & (1,'00111000')   & \multicolumn{1}{c|}{}            & \multicolumn{1}{c|}{\makecell{Lack of battery \\during data collection}}                              & 3,05\%                        \\ \cline{2-6} 
 	\multicolumn{1}{c|}{}                   & (0,'00011')   & (1,00110110')    & \multicolumn{1}{c|}{(2,'01101')} & \multicolumn{1}{c|}{\makecell{Lack of battery \\during data processing}}                              & 2,67\%                        \\ \cline{2-6} 
-	\multicolumn{1}{c|}{}                   & (2,'01101')   & (0,'110110101')  & \multicolumn{1}{c|}{}            & \multicolumn{1}{c|}{\makecell{Sensor malfunctioning \\during transfer}}                                      & 1,33\%                        \\ \hline
-	\multicolumn{1}{c|}{\multirow{2}{*}{D}} & (2,'00001')   & (0,'110000')     & \multicolumn{1}{c|}{}            & \multicolumn{1}{c|}{\multirow{2}{*}{\makecell{Sensor malfunctioning during \\Central Node processing}}} & 2,90\%                        \\ \cline{2-4} \cline{6-6} 
+	\multicolumn{1}{c|}{}                   & (2,'01101')   & (0,'110110101')  & \multicolumn{1}{c|}{}            & \multicolumn{1}{c|}{\makecell{Sensor absent \\during transfer}}                                      & 1,33\%                        \\ \hline
+	\multicolumn{1}{c|}{\multirow{2}{*}{D}} & (2,'00001')   & (0,'110000')     & \multicolumn{1}{c|}{}            & \multicolumn{1}{c|}{\multirow{2}{*}{\makecell{Sensor absent during \\Central Node processing}}} & 2,90\%                        \\ \cline{2-4} \cline{6-6} 
 	\multicolumn{1}{c|}{}                   & (2,'00001')   & (0,'000000')     & \multicolumn{1}{c|}{}            & \multicolumn{1}{c|}{}                                                                    & 2,79\%                        \\ \hline
-	\multicolumn{1}{c|}{E}                  & (0,'000010')  &                  & \multicolumn{1}{c|}{}            & \multicolumn{1}{c|}{\makecell{Sensor malfunctioning \\at some point}}                                        & 63,59\%                       \\ \hline
-	\multicolumn{1}{c|}{F}                  & (0,'01001')   &                  & \multicolumn{1}{c|}{}            & \multicolumn{1}{c|}{\makecell{Sensor malfunctioning during \\Central Node processing}}                  & 0,68\%                        \\ \hline
+	\multicolumn{1}{c|}{E}                  & (0,'000010')  &                  & \multicolumn{1}{c|}{}            & \multicolumn{1}{c|}{\makecell{Sensor absent \\at some point}}                                        & 63,59\%                       \\ \hline
+	\multicolumn{1}{c|}{F}                  & (0,'01001')   &                  & \multicolumn{1}{c|}{}            & \multicolumn{1}{c|}{\makecell{Sensor absent during \\Central Node processing}}                  & 0,68\%                        \\ \hline
 	\multicolumn{1}{c|}{\multirow{2}{*}{G}} & (5,'10001')   & (6,'00011')      & \multicolumn{1}{c|}{}            & \multicolumn{1}{c|}{\multirow{2}{*}{\makecell{Lack of battery \\during data collection}}}             & 2,84\%                        \\ \cline{2-4} \cline{6-6} 
 	\multicolumn{1}{c|}{}                   & (5,'10001')   & (6,'00010')      & \multicolumn{1}{c|}{}            & \multicolumn{1}{c|}{}                                                                    & 1,63\%                        \\ \hline
 	\multicolumn{1}{c|}{\multirow{4}{*}{H}} & (5,'01100')   & (6,'11000')      & \multicolumn{1}{c|}{(7,'10000')} & \multicolumn{1}{c|}{\multirow{4}{*}{\makecell{Lack of battery \\during data processing}}}             & 2,58\%                        \\ \cline{2-4} \cline{6-6} 
@@ -268,10 +269,11 @@ Table \ref{tab:patterns_detector_group} elaborates on the sankey chart from Figu
 	\label{tab:patterns_detector_group}
 \end{table}
 
-Nevertheless, not all the unveiled patterns are informative. Groups D and F, for example, describe scenarios where some further details would be required. For some reason, the malfunctioning of the sensor was related to the Central Node not being able to process the data transmitted, which is not very intuitive. The other groups, G through K, represent just a few portion of the nonself dataset, and have a very similar description to groups A, B and C. The difference lies in the noise found in the data. The threshold defined during the feature selection step brought to the analysis some features that describe the battery of other sensors, which may have caused some unneeded patterns to be formed.
+Differently, Group A matches the cases in which the data was not transmitted due to the battery running out either during the data collection, processing or transfering. It was the second in percentage of matches, accounting for near 21\% of the total of anomalous data. Even though the detectors were positioned on lower bits, Group B goes in a similar direction, by matching violations related to the lack of battery during the acquisition of data, though the bits in the mid-region of the string. Group C, in turn, defined a set of mixed patterns that account for both the battery running out and the malfunctioning of the sensor. Therefore, from these three, it is possible to infer that the charge of the battery is key for the fulfillment of the property \textbf{P7}.
 
+Nevertheless, not all the unveiled patterns were informative. Groups D and F, for example, describe scenarios where some further details would be required. For some reason, the absence of the sensor was related to the Central Node not being able to process the data transmitted, which is not very intuitive.
 
-All in all, this analysis should provide the CPS analyst with substantial information to address the anomalous situations. By looking at scenarios unveiled by the groups, it is possible to understand that the battery is key for the satisfaction of the property \textbf{P7}. This happens since the cell may run out during the collection, the processing, or the transfering of the data, making it impossible for the Central Node to process it within the time restriction. Therefore, it could be the case for the analyst to update this observer, so that it would consider this newly unveiled variability. Figure \ref{fig:ev_observer_fxd} illustrates the changes that could be made to the observer of the property \textbf{P7}, based on the Observer catalog from \cite{2022PSP}. A new state related to the battery being off would be created so that, if this component runs out after the data was acquired, then the error state would not be reached.
+On the other hand, Cluster 2, comprised of groups G through K, represents just a few portion of the nonself dataset, and have a very similar description to groups A, B and C. By looking closely at the detectors, it is possible to verify that the changes happen mainly in the lower bits, which are related to the other sensors' batteries (refer to table \ref{tab:pos_features}). Based on the domain knowledge, those features are identified as noise since they should not impact directly in the violation of the property for a specific sensor. The threshold defined during the feature selection step brought to the analysis some features that describe the battery of other sensors, which may have caused some unneeded patterns to be formed. Hence, the patterns from this cluster did not add much to the analysis.
 
 \begin{figure}[]
 	\centering
@@ -280,7 +282,7 @@ All in all, this analysis should provide the CPS analyst with substantial inform
 	\label{fig:ev_observer_fxd}
 \end{figure}
 
-Therefore, these violation-related detector groups generated from our technique account for the effectiveness of the approach in the discovering of patterns in the simulated data since they were shown to be relevant for the refinement of property \textbf{P7} runtime monitor. Figure \ref{fig:pyramid} illustrates the overall process of finding relevant patterns. From the 229 detectors generated by the Negative Selection Algorithm, only 68 have matched with nonself data. From those, we concluded that some of them were actually the same pattern, splitted into two or more detectors due to the size limitation of the R-chunk, and thus, could be agglutinated. After merging them, the resultant 49 detectors were grouped into 11 clusters of patters that share a common behavior. These cluster were further analyzed by reverse mapping the strings into features, resulting in the extraction of relevant information about the violation scenarios, and the refinement of the runtime monitor related to the property at hand.
+All in all, this analysis should provide the CPS analyst with substantial information to address the anomalous situations. By looking at scenarios unveiled by the groups, it is possible to understand that the battery is key for the satisfaction of the property \textbf{P7}. This happens since the cell may run out during the collection, the processing, or the transfering of the data, making it impossible for the Central Node to process it within the time restriction. Therefore, it could be the case for the analyst to update this observer, so that it would consider this newly unveiled variability. Figure \ref{fig:ev_observer_fxd} illustrates the changes that could be made to the observer of the property \textbf{P7}, based on the Observer catalog from \cite{2022PSP}. A new state related to the battery being off would be created so that, if this component runs out after the data was acquired, then the error state would not be reached.
 
 
 \begin{figure}[!h]
@@ -289,6 +291,18 @@ Therefore, these violation-related detector groups generated from our technique 
 	\caption{Number of Detectors at each step}
 	\label{fig:pyramid}
 \end{figure}
+
+Therefore, these violation-related detector groups generated from our technique account for the effectiveness of the approach in the discovering of patterns in the simulated data since they were shown to be relevant for the refinement of property \textbf{P7} runtime monitor. Figure \ref{fig:pyramid} illustrates the overall process of finding relevant patterns. From the 229 detectors generated by the Negative Selection Algorithm, only 68 have matched with nonself data. From those, we concluded that some of them were actually the same pattern, splitted into two or more detectors due to the size limitation of the R-chunk, and thus, could be agglutinated. After merging them, the resultant 49 detectors were grouped into 11 clusters of patters that share a common behavior. These cluster were further analyzed by reverse mapping the strings into features, resulting in the extraction of relevant information about the violation scenarios, and the refinement of the runtime monitor related to the property at hand.
+
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width=\textwidth, keepaspectratio]{img/DecisionTree-patterns.png}
+	\caption{Comparison - Patterns found by using a Decision Tree}
+	\label{fig:decisionTreePatterns}
+\end{figure}
+
+Lastly, the Decision Tree algorithm (DT) was performed in order to compare our approach to another technique. The same data served as input, and the output is a tree depicted in Figure \ref{fig:decisionTreePatterns}. Each node of the tree is related to one of the features, with their position is related to its importance. By analyzing it, it is noteworthy that the there is a whole subtree related only to the other sensor's battery, which we already made the case that it accounts for noise in the data, and thus can be discarded. Therefore, only three remaining patters are left, which can be related to groups E, for the one in the highest level of the three; groups A, B and C for the second highest; and groups D and F for the lowest one. The subtree with the noise found is related to groups G through K. In comparison, our approach was able to identify a greater number of patterns, besides find specializations of each. For example, the DT identified a pattern in which the violation happened because the battery was unavailable at some point during the execution segment. In the meanwhile, our proposed methodology not only found that, but also pointed that this could happen during the data collection, processing and transfering, with the relevance for each scenario. Therefore, even though the precision and recall rates were similar between the two approaches, the explainability provided by ours allows for a better assessment of the reasons behind the property violations.
+
 
 \section{Discussion}
 
