--- a/tex/6_Conclusion.tex
+++ b/tex/6_Conclusion.tex
@@ -1,10 +1,16 @@
 \label{sec:Conclusion}
-In this work, we proposed a methodology to systematically enhance the verification task performed by runtime monitors in Cyber-physical systems. The inherent complexities in the relation between the cybernetic and the physical natures may increase the challenge of verifying such systems. The runtime monitors initially designed may suffer from the lack of knowledge of the runtime environment, which might impact in the ability of the system analyst to understand the set of features or behaviors responsible for the anomalous executions. To address that, we propose the implementation of a prototype of the system, by using a set of tools that are specifically designed to model CPS. Several simulations are performed in the prototype, generating an operation dataset. This set will be reshaped, labeled as property violations or as regular executions, and inputed into the Negative Selection Algorithm. This immune-based algorithm is capable of generating a set of detectors specialized in identifying property violations. This detectors are then studied as a means to extract the patterns related to the anomalous behavior. Finally, these patterns are used to enhance the runtime monitors, providing the CPS with a more robust verification and, thus, reliable execution.
+In this work, we proposed a methodology to systematically enhance the verification task performed by runtime monitors in Cyber-physical systems. The inherent complexities in the relation between the cybernetic and the physical natures may increase the challenge of verifying such systems. The runtime monitors initially designed may suffer from the lack of knowledge of the runtime environment, which might impact in the ability of the system analyst to understand the set of features or behaviors responsible for the anomalous executions. 
+
+To address that, we propose the implementation of a prototype of the system, by using a set of tools that are specifically designed to model CPS. Several simulations are performed in the prototype, generating an operation dataset. This set will be reshaped, labeled as property violations or as regular executions, and inputed into the NSA. This immune-based algorithm is capable of generating a set of detectors specialized in identifying property violations. This detectors are then studied as a means to extract the patterns related to the anomalous behavior. Finally, these patterns are used to enhance the runtime monitors, providing the CPS with a more robust verification and, thus, reliable execution.
 
 Our approach was evaluated using the Body Sensor Network. The overall result of the NSA was very satisfactory, with high values of precision and recall, very similar to other machine learning techniques. The advantage of the NSA concerns the generated detectors, which provide the methodology with a high interpretability of the patterns found. In the end, 49 patterns were found, which were distributed in 11 groups based on similarity.
 
 In future works, we plan to expand the analysis of the patterns by using the formalism found in the causality analysis research field to identify the root cause of the property violation. The design of the CPS would greatly benefit from this, since the analyst would be provided with the tools needed to tackle the actual source of the problem, and not only the indicative of where the problem might be. 
 
-Since the evaluation was performed on a single study case, there is a need for broadening the reach of our approach to other domains. Hence, other plans are related to the implementation of study cases with more complex CPS. We see the BSN as a simple, yet powerfull, proof that the concept holds. Nevertheless, modeling a CPS consisting of several different modules, conected through networks, with a set of dynamic complexities and so on would be a interesting way of stressing the proposed solution and seeing if it still holds.
+Even though we tried to be as unbiased as possible, our evaluation relied much on data that was randomly generated. Thus, in a near future, we intend to check how our methodology performs in a real wold scenario, by leveraging data from patients with varying diseases, ages and other important aspects. In this opportunity, we also plan to evaluate our methodology not only for specific properties, but also for each specific problem. This happens because our approach perform well for young patients with heart diseases, but not for older patients with lung cancer, for instance. This may happen also for the variability in the configuration of the simulation. On the one hand, we may find that the NSA performs well for identifying the battery, but not so much for unreliable sensor mesurements, for example. Hence, a thorough evaluation based on predefined scenarios would help us better understand the strenght of the methodology.
+
+Since the evaluation was performed on a single study case, there is a need for broadening the reach of our approach to other domains. Hence, other plans are related to the implementation of study cases with more complex CPS. We see the BSN as a simple, yet powerfull, proof that the concept holds. Nevertheless, modeling a CPS consisting of several different modules, conected through networks, with a set of dynamic complexities and so on would be a interesting way of stressing the proposed solution and seeing if it still holds. 
+
+We also see the need for provinding a deeper evaluation of our methodoly by using a more robust and complex example of CPS. Due to time limitations, we have restricted ourselves to a limited number of variabilities that could be found in the BSN environment. Maybe using a real world application, with a prototype designed with industrial standards would help us to assess better the complex relations between the physical and cybernetic aspects and, thus, provide a better understanding of the performance of the approach.
 
 Finally, in this work we made use of the binary version of the NSA in order to leverage its high interpretability. Nevertheless, there can be found in the literature more advanced versions of the algorithm \cite{NSAResearch2021}, which represent the data as real values and whose detectors are complex strucutres that solve many of the shortcommings found in the binary version. In the future, we intend to look for ways to utilize these state-of-the-art versions of the NSA in our approach, without losing in interpretability.  
