--- a/tex/Anexo1.tex
+++ b/tex/Anexo1.tex
@@ -5,7 +5,7 @@
 %% Authors : Flávio Maico Vaz da Costa
 %%              (based on previous versions by José Carlos L. Ralha)
 %% Version : 0.96
-%% Updates : 0.5  [??/11/2004] - Initial release. don't remember the day.
+%% UpDateTypes : 0.5  [??/11/2004] - Initial release. don't remember the day.
 %%         : 0.75 [04/04/2005] - Fixed font problems, UnB logo
 %%                               resolution, keywords and palavras-chave
 %%                               hyphenation and generation problems,
