--- a/tex/resumo.tex
+++ b/tex/resumo.tex
@@ -1,5 +1,8 @@
-Os sistemas ciberfísicos são uma realidade definitiva na nossa vida quotidiana, especialmente nos últimos anos. No entanto, a complexidade inerente a estes domínios suscita alguns desafios como por exemplo acontecimentos imprevistos, dificuldades em representar os processos cibernéticos ou físicos, e o conhecimento incompleto dos contextos do ambiente. Tudo isso pode dificultar a tarefa de verificação do sistema, e tornar os CPS pouco confiáveis em tempo de execução. 
+Recentemente, os sistemas Ciber-Físicos (CPS) têm se tornado cada vez mais relevantes em nossa vida cotidiana, o que demanda maiores níveis de confiabilidade. A área de Runtime Verification endereça esse ponto por meio de monitores em tempo de execução que verificam a satisfatibilidade de propriedades do sistema formalizadas. Quando uma violação é identificada, o sistema pode alertar o usuário ou executar alguma rotina predefinida para manter a operação regular do sistema. Ao final, o analista pode diagnosticar o problema e realizar as medidas necessárias para a correção
 
-Procurar inspiração em processos de outros campos é uma atividade muito comum na Informática. A natureza, especialmente a biologia, há muito que serve como uma fonte frutuosa de metodologias como as abordagens de inteligência artificial. O Algoritmo de Selecção Negativa, por exemplo, é uma técnica de base imunológica com múltiplas aplicações bem sucedidas em CPS, principalmente no campo do diagnóstico de falhas para a identificação de comportamentos anômalos. A explicabilidade do algoritmo pode trazer benefícios expressivos para a concepção e verificação de CPS, ajudando a compreender os padrões de violação de propriedade, e assim melhorar a verificação do sistema.
+No entanto, a complexidade inerente a estes domínios suscita alguns desafios, como por exemplo a imprevisibilidade de certos acontecimentos, dificuldades em representar os processos cibernéticos ou físicos, e o conhecimento incompleto dos contextos do ambiente. Tudo isso pode fazer com que os monitores se comportem de forma inesperada, ou que eles não monitorem algum aspecto que deveria ser considerado.
 
-Neste trabalho, é proposta uma metodologia que visa aumentar a fiabilidade de CPS. Isto é feito através de um diagnóstico sistemático das violações das propriedades do sistema baseado em dados gerados por um protótipo, realizado nas fases iniciais de desenvolvimento. Um algoritmo de inspiração imunológica chamado Seleção Negativa (NSA) serve como método de redundância analítica para isolar e identificar a causa da violação de propriedade no sistema. É possível que, através do arrazoamento sobre as razões pelas quais as violações de propriedade acontecem, a especificação do sistema e a própria propriedade possam ser refinadas, mecanismos tolerantes a falhas possam ser criados permitindo, assim, o desenvolvimento de aplicações mais seguras e melhores.
+Procurar inspiração em processos de outros campos é uma atividade muito comum na Informática. O Algoritmo de Seleção Negativa, por exemplo, é uma técnica de base imunológica com múltiplas aplicações bem sucedidas em CPS, principalmente no campo do diagnóstico de falhas para a identificação de comportamentos anômalos. A explicabilidade do algoritmo pode trazer benefícios expressivos para a concepção e verificação de CPS, ajudando a compreender os padrões de violação de propriedade, e assim melhorar a verificação do sistema.
+
+Neste trabalho, propõe-se uma metodologia que visa aumentar a confiabilidade de CPS. Isto é feito através de um diagnóstico sistemático das violações das propriedades do sistema baseado em dados gerados por um protótipo. O algoritmo de Seleção Negativa (NSA) serve como método de redundância analítica para isolar e identificar fatores que contribuem para a violação de propriedade no sistema. É possível que, através do arrazoamento sobre tais fatores, 
+as razões pelas quais as violações de propriedade acontecem, os monitores possam ser refinados e mecanismos tolerantes a falhas possam ser criados permitindo, assim, o desenvolvimento de aplicações mais seguras e melhores.
