--- a/qualificacao.tex
+++ b/qualificacao.tex
@@ -20,7 +20,7 @@
 \orientador[a]{\prof[a] \dr[a] Genaína Nunes Rodrigues}{CIC/UnB}%
 %\coorientador{\prof \dr José Ralha}{CIC/UnB}
 \coordenador{\prof \dr Ricardo Pezzuol Jacobi}{CIC/UnB}%
-\diamesano{11}{Novembro}{2022}%
+\diamesano{14}{Novembro}{2022}%
 
 \membrobanca{\prof \dr Luís Paulo Faina Garcia}{CIC/UnB}%
 \membrobanca{\prof \dr Lars Grunske}{Humboldt-Universität zu Berlin}%
@@ -30,10 +30,9 @@
 \titulo{Enhancing Runtime Monitors of Cyber-Physical Systems using Negative Selection}%
 
 \palavraschave{Sistemas Cyber-físicos, Especificação de Propriedades, Seleção Negativa, Diagnóstico de Falhas, Verificação}%
-\keywords{Cyber-physical Sistems, Property Specification, Negative Selection, Fault Diagnosis, Verification}%
+\keywords{Cyber-physical Systems, Property Specification, Negative Selection, Fault Diagnosis, Verification}%
 
 \newcommand{\unbcic}{\texttt{UnB-CIC}}%
-
 
 \usepackage{multirow}
 \usepackage{amssymb}
@@ -44,9 +43,9 @@
 \begin{document}%
     \capitulo{1_Introduction}{Introduction}\label{sec:intro}
     \capitulo{2_Background}{Background}
+    \capitulo{3_RelatedWork}{Related work}
     \capitulo{BSN}{Running Example: Body Sensor Network}
     \capitulo{4_Proposal}{Enhancing Runtime Monitors of Cyber-Physical Systems using Negative Selection}
-    \capitulo{3_RelatedWork}{Related work}
     \capitulo{5_Evaluation}{Evaluation}
     \capitulo{6_Conclusion}{Conclusion and future work}
 \end{document}%
